Style fix for overflowing names.

--- a/Fuyuki.Client/src/components/Groups/Groups.scss
+++ b/Fuyuki.Client/src/components/Groups/Groups.scss
@@ -68,4 +68,10 @@
       height: 75%;
     }
   }
+
+  &__link {
+    display: block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
